--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                                 Codermex es una plataforma
                                 donde conoceran sobre mi, mis experiencias
                                 como desarrollador de software y web, habilidades, certificaciones
-                                mas destacados que fui obteniendo en distintos cursos que fui realizando
+                                mas destacados que fui obteniendo en distintos cursos
                                 y mis trabajos hasta la actualidad como freelance.
                             </p>
                             <p>&nbsp;</p>
@@ -147,40 +147,30 @@
             </div>
         </section>
         <section class="snap-section-3">
-            <div id="color_div_section_3">
-                <p class="text-center" style="margin-bottom: 0rem">Compañia Actual</p>
-            </div>
+            <!--<div id="color_div_section_3">
+                <p class="text-center" style="margin-bottom: 0rem">EXPERIENCIAS</p>
+            </div>-->
             <div class="content-info">
-                <!-- <div class="row">
+                <div class="row">
                     <div class="vc-column center-col text-center">
                         <div class="column-inner-wrapper">
-                            <div class="text-company">
-                                <img src="img/Png/LOGO-CNP-web-1.png" alt="">
-                                <p>Actualmente estoy trabajando como Analista IT
-                                    en una compañia de seguros llamada CNP Assurances S.A
-                                    desde enero del 2022, realizando
-                                    Mantenimiento, mejoras y evolutivos
-                                    utilizando Visual Basic 6, SQL Server,
-                                    Reporting Services y Talend.
-                                </p>
-                            </div>
+                            <span class="margin-five no-margin-top display-block letter-spacing-2" style="color:white">
+                                META A FUTURO</span>
+                            <p style="color:white">
+                                Mi sueño es la creacion de mi propia empresa de tecnologia,
+                                donde pueda sastifacer a mis futuros clientes con una aplicacion donde
+                                pueda resolver sus necesidades sin importar cual sea sus problemas.
+                            </p>
+                            <img src="img/Png/pngwing.com (1).png" alt="" style="height: 50%; width: 50%;">
                         </div>
-                    </div>
-                </div>-->
-                <div class="vc-column column-izq">
-                    <div class="text-center">
-                        <span>CNP SEGUROS</span>
-                        <br>
-                        <p>Actualmente estoy trabajando como Analista IT
-                            en una compañia de seguros llamada CNP Assurances S.A
-                            desde enero del 2022, realizando
-                            mantenimiento, mejoras y evolutivos con la
-                            utilizacion de Visual Basic 6, SQL Server,
-                            Reporting Services y Talend.
-                        </p>
                     </div>
                 </div>
             </div>
+        </section>
+        <section class="snap-section-4" style="background-color: aliceblue;">
+            <p>
+                adasdasd
+            </p>
         </section>
     </section>
 
