--- a/index.html
+++ b/index.html
@@ -128,18 +128,26 @@
                                 Como freelance, mis desarrollos actualmente son de
                                 aplicaciones de escritorio, hasta terminar de desarrollar mis
                                 habilidades como Web Developer.-->
-                                Codermex es una plataforma
-                                donde conoceran sobre mi, mis experiencias
+                                <!--Codermex es una plataforma
+                                donde contiene informacion sobre mi, tales como mis experiencias
                                 como desarrollador de software y web, habilidades, certificaciones
-                                mas destacados que fui obteniendo en distintos cursos
-                                y mis trabajos hasta la actualidad como freelance.
+                                mas destacados y mis trabajos hasta la actualidad como freelance.-->
+                                Soy desarrollador de software desde el año 2019 donde obtuve mi primer empleo en el
+                                ambito informatico como Programador JR en SISTRAN Consultores. Pero hoy en dia
+                                estoy trabajando como Analista IT en la empresa CNP Seguros desde el 2022 hasta la
+                                actualidad.
+                                Tengo 4 año de experiencia como desarrollador de software, varios conocimientos en
+                                lenguajes
+                                de programacion que fui desarrollando en estos años con las practicas de mi dia a dia y
+                                capacitaciones
+                                que fui realizando.
                             </p>
                             <p>&nbsp;</p>
                             <img src="img/Lobo.png" style="height: 100px; width: 100px;">
                             <p class="text-med width-90 center-col margin-seven no-margin-bottom">
-                                ¿Te intere saber el codigo de la pagina WEB?</p>
+                                ¿Sos desarrollador?, ¿Te intere saber el codigo de la pagina WEB?</p>
                             <a href="https://github.com/ProgramadorMLopez/Codermex">
-                                <button class="raise">VER CODIGO</button>
+                                <button class="raise">VER CODIGO EN MI REPOSITORIO GITHUB</button>
                             </a>
                         </div>
                     </div>
@@ -155,13 +163,25 @@
                     <div class="vc-column center-col text-center">
                         <div class="column-inner-wrapper">
                             <span class="margin-five no-margin-top display-block letter-spacing-2" style="color:white">
-                                META A FUTURO</span>
-                            <p style="color:white">
-                                Mi sueño es la creacion de mi propia empresa de tecnologia,
-                                donde pueda sastifacer a mis futuros clientes con una aplicacion donde
-                                pueda resolver sus necesidades sin importar cual sea sus problemas.
+                                TECNOLOGIAS</span>
+                            <span class="label VSC">VISUAL STUDIO CODE</span>
+                            <span class="label HTML">HTML</span>
+                            <span class="label CSS">CSS</span>
+                            <span class="label JAVASCRIPT">JAVASCRIPT</span>
+                            <span class="label BOOSTRAP">BOOSTRAP</span>
+                            <span class="label PYTHON">PYTHON</span>
+                            <span class="label DJANGO">DJANGO</span>
+                            <span class="label VB6">VB6</span>
+                            <span class="label SQLSERVER">SQL SERVER</span>
+                            <span class="label TALEND">TALEND</span>
+                            <!--<p class="text-center" style="color:white">
+                                Mi sueño es la creacion de mi propia empresa de tecnologia CODERMEX,
+                                donde pueda sastifacer a mis futuros clientes con aplicaciones que
+                                resuelva sus necesidades sin importar cual sea sus problemas.
+                                Trabajando en conjunto con ellos donde esa APPs cumpla con sus requisitos
+                                al 100%
                             </p>
-                            <img src="img/Png/pngwing.com (1).png" alt="" style="height: 50%; width: 50%;">
+                            <img src="img/Png/pngwing.com (1).png" alt="" style="height: 50%; width: 50%;">-->
                         </div>
                     </div>
                 </div>
