--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                                     d="M.5 6a.5.5 0 0 0-.488.608l1.652 7.434A2.5 2.5 0 0 0 4.104 16h5.792a2.5 2.5 0 0 0 2.44-1.958l.131-.59a3 3 0 0 0 1.3-5.854l.221-.99A.5.5 0 0 0 13.5 6H.5ZM13 12.5a2.01 2.01 0 0 1-.316-.025l.867-3.898A2.001 2.001 0 0 1 13 12.5ZM2.64 13.825 1.123 7h11.754l-1.517 6.825A1.5 1.5 0 0 1 9.896 15H4.104a1.5 1.5 0 0 1-1.464-1.175Z" />
                                 <path
                                     d="m4.4.8-.003.004-.014.019a4.167 4.167 0 0 0-.204.31 2.327 2.327 0 0 0-.141.267c-.026.06-.034.092-.037.103v.004a.593.593 0 0 0 .091.248c.075.133.178.272.308.445l.01.012c.118.158.26.347.37.543.112.2.22.455.22.745 0 .188-.065.368-.119.494a3.31 3.31 0 0 1-.202.388 5.444 5.444 0 0 1-.253.382l-.018.025-.005.008-.002.002A.5.5 0 0 1 3.6 4.2l.003-.004.014-.019a4.149 4.149 0 0 0 .204-.31 2.06 2.06 0 0 0 .141-.267c.026-.06.034-.092.037-.103a.593.593 0 0 0-.09-.252A4.334 4.334 0 0 0 3.6 2.8l-.01-.012a5.099 5.099 0 0 1-.37-.543A1.53 1.53 0 0 1 3 1.5c0-.188.065-.368.119-.494.059-.138.134-.274.202-.388a5.446 5.446 0 0 1 .253-.382l.025-.035A.5.5 0 0 1 4.4.8Zm3 0-.003.004-.014.019a4.167 4.167 0 0 0-.204.31 2.327 2.327 0 0 0-.141.267c-.026.06-.034.092-.037.103v.004a.593.593 0 0 0 .091.248c.075.133.178.272.308.445l.01.012c.118.158.26.347.37.543.112.2.22.455.22.745 0 .188-.065.368-.119.494a3.31 3.31 0 0 1-.202.388 5.444 5.444 0 0 1-.253.382l-.018.025-.005.008-.002.002A.5.5 0 0 1 6.6 4.2l.003-.004.014-.019a4.149 4.149 0 0 0 .204-.31 2.06 2.06 0 0 0 .141-.267c.026-.06.034-.092.037-.103a.593.593 0 0 0-.09-.252A4.334 4.334 0 0 0 6.6 2.8l-.01-.012a5.099 5.099 0 0 1-.37-.543A1.53 1.53 0 0 1 6 1.5c0-.188.065-.368.119-.494.059-.138.134-.274.202-.388a5.446 5.446 0 0 1 .253-.382l.025-.035A.5.5 0 0 1 7.4.8Zm3 0-.003.004-.014.019a4.077 4.077 0 0 0-.204.31 2.337 2.337 0 0 0-.141.267c-.026.06-.034.092-.037.103v.004a.593.593 0 0 0 .091.248c.075.133.178.272.308.445l.01.012c.118.158.26.347.37.543.112.2.22.455.22.745 0 .188-.065.368-.119.494a3.198 3.198 0 0 1-.202.388 5.385 5.385 0 0 1-.252.382l-.019.025-.005.008-.002.002A.5.5 0 0 1 9.6 4.2l.003-.004.014-.019a4.149 4.149 0 0 0 .204-.31 2.06 2.06 0 0 0 .141-.267c.026-.06.034-.092.037-.103a.593.593 0 0 0-.09-.252A4.334 4.334 0 0 0 9.6 2.8l-.01-.012a5.099 5.099 0 0 1-.37-.543A1.53 1.53 0 0 1 9 1.5c0-.188.065-.368.119-.494.059-.138.134-.274.202-.388a5.446 5.446 0 0 1 .253-.382l.025-.035A.5.5 0 0 1 10.4.8Z" />
-                            </svg> Historia
+                            </svg> Sobre mi
                         </a>
                     </li>
                     <li class="nav-item dropdown border-end">
@@ -59,13 +59,23 @@
                                 class="bi bi-database" viewBox="0 1 16 16">
                                 <path
                                     d="M4.318 2.687C5.234 2.271 6.536 2 8 2s2.766.27 3.682.687C12.644 3.125 13 3.627 13 4c0 .374-.356.875-1.318 1.313C10.766 5.729 9.464 6 8 6s-2.766-.27-3.682-.687C3.356 4.875 3 4.373 3 4c0-.374.356-.875 1.318-1.313ZM13 5.698V7c0 .374-.356.875-1.318 1.313C10.766 8.729 9.464 9 8 9s-2.766-.27-3.682-.687C3.356 7.875 3 7.373 3 7V5.698c.271.202.58.378.904.525C4.978 6.711 6.427 7 8 7s3.022-.289 4.096-.777A4.92 4.92 0 0 0 13 5.698ZM14 4c0-1.007-.875-1.755-1.904-2.223C11.022 1.289 9.573 1 8 1s-3.022.289-4.096.777C2.875 2.245 2 2.993 2 4v9c0 1.007.875 1.755 1.904 2.223C4.978 15.71 6.427 16 8 16s3.022-.289 4.096-.777C13.125 14.755 14 14.007 14 13V4Zm-1 4.698V10c0 .374-.356.875-1.318 1.313C10.766 11.729 9.464 12 8 12s-2.766-.27-3.682-.687C3.356 10.875 3 10.373 3 10V8.698c.271.202.58.378.904.525C4.978 9.71 6.427 10 8 10s3.022-.289 4.096-.777A4.92 4.92 0 0 0 13 8.698Zm0 3V13c0 .374-.356.875-1.318 1.313C10.766 14.729 9.464 15 8 15s-2.766-.27-3.682-.687C3.356 13.875 3 13.373 3 13v-1.302c.271.202.58.378.904.525C4.978 12.71 6.427 13 8 13s3.022-.289 4.096-.777c.324-.147.633-.323.904-.525Z" />
-                            </svg> Proyectos
+                            </svg> Portafolio
                         </a>
+                        <!--
                         <ul class="dropdown-menu" style="background-color: #faf9fce0; font-size :20px">
-                            <!--
+                            
                                 dropdown: Despegable
                                 background: Fondo
-                            -->
+                            
+                            <li><a class="dropdown-item" href="#">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                                        class="bi bi-person-circle" viewBox="0 0 16 16">
+                                        <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z" />
+                                        <path fill-rule="evenodd"
+                                            d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z" />
+                                    </svg> Portafolio
+                                </a>
+                            </li>
                             <li><a class="dropdown-item" href="https://github.com/ProgramadorMLopez">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                                         class="bi bi-github" viewBox="0 0 16 16">
@@ -74,24 +84,15 @@
                                     </svg> GitHub
                                 </a>
                             </li>
-                            <li><a class="dropdown-item" href="#">
-                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                                        class="bi bi-person-circle" viewBox="0 0 16 16">
-                                        <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z" />
-                                        <path fill-rule="evenodd"
-                                            d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z" />
-                                    </svg> Clientes
-                                </a>
-                            </li>
                         </ul>
-                    </li>
+                    </li>-->
                     <li class="nav-item border-end">
                         <a class="nav-link" href="#">
                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                                 class="bi bi-laptop" viewBox="0 1 16 16">
                                 <path
                                     d="M13.5 3a.5.5 0 0 1 .5.5V11H2V3.5a.5.5 0 0 1 .5-.5h11zm-11-1A1.5 1.5 0 0 0 1 3.5V12h14V3.5A1.5 1.5 0 0 0 13.5 2h-11zM0 12.5h16a1.5 1.5 0 0 1-1.5 1.5h-13A1.5 1.5 0 0 1 0 12.5z" />
-                            </svg> Servicios
+                            </svg> Clientes
                         </a>
                     </li>
                 </ul>
@@ -128,7 +129,8 @@
                                 Como freelance, mis desarrollos actualmente son de
                                 aplicaciones de escritorio, hasta terminar de desarrollar mis
                                 habilidades como Web Developer.-->
-                                <!--Codermex es una plataforma
+                                <!--Codermex es 
+                                    una plataforma
                                 donde contiene informacion sobre mi, tales como mis experiencias
                                 como desarrollador de software y web, habilidades, certificaciones
                                 mas destacados y mis trabajos hasta la actualidad como freelance.-->
@@ -155,10 +157,29 @@
             </div>
         </section>
         <section class="snap-section-3">
-            <!--<div id="color_div_section_3">
-                <p class="text-center" style="margin-bottom: 0rem">EXPERIENCIAS</p>
+            <div id="color_div_section_3">
+                <p class="text-center" style="margin-bottom: 0rem">WINDOWS&nbsp; &nbsp; &nbsp; | &nbsp; &nbsp; &nbsp;
+                    WEB</p>
+            </div>
+            <div class="content-img-text">
+                <img src="img/1686405422859 (1).jpg" alt="foto de perfil">
+            </div>
+            <!--<div class="row-card row-cols-1 row-cols-md-3 g-4">
+                <div class="col">
+                    <div class="card">
+                        <img src="img/19362653.jpg" class="card-img-top" alt="frontend">
+                        <div class="card-body">
+                            <h5 class="card-title">Skills</h5>
+                            <p class="card-text">
+                                Frontend: HTML - CSS - JAVASCRIPT - BOOSTRAP
+                                Banckend: PYTHON - DJANGO - SQL SERVER - MYSQL
+                            </p>
+                        </div>
+                    </div>
+                </div>
+
             </div>-->
-            <div class="content-info">
+            <!--<div class="content-info">
                 <div class="row">
                     <div class="vc-column center-col text-center">
                         <div class="column-inner-wrapper">
@@ -174,18 +195,18 @@
                             <span class="label VB6">VB6</span>
                             <span class="label SQLSERVER">SQL SERVER</span>
                             <span class="label TALEND">TALEND</span>
-                            <!--<p class="text-center" style="color:white">
+                            <p class="text-center" style="color:white">
                                 Mi sueño es la creacion de mi propia empresa de tecnologia CODERMEX,
                                 donde pueda sastifacer a mis futuros clientes con aplicaciones que
                                 resuelva sus necesidades sin importar cual sea sus problemas.
                                 Trabajando en conjunto con ellos donde esa APPs cumpla con sus requisitos
                                 al 100%
                             </p>
-                            <img src="img/Png/pngwing.com (1).png" alt="" style="height: 50%; width: 50%;">-->
+                            <img src="img/Png/pngwing.com (1).png" alt="" style="height: 50%; width: 50%;">
                         </div>
                     </div>
                 </div>
-            </div>
+            </div>-->
         </section>
         <section class="snap-section-4" style="background-color: aliceblue;">
             <p>
