d-flex column section-3 img

--- a/index.html
+++ b/index.html
@@ -133,20 +133,27 @@
                                     una plataforma
                                 donde contiene informacion sobre mi, tales como mis experiencias
                                 como desarrollador de software y web, habilidades, certificaciones
-                                mas destacados y mis trabajos hasta la actualidad como freelance.-->
+                                mas destacados y mis trabajos hasta la actualidad como freelance.
                                 Soy desarrollador de software desde el año 2019 donde obtuve mi primer empleo en el
-                                ambito informatico como Programador JR en SISTRAN Consultores. Pero hoy en dia
+                                ambito informatico como Programador en SISTRAN Consultores. Pero hoy en dia
                                 estoy trabajando como Analista IT en la empresa CNP Seguros desde el 2022 hasta la
                                 actualidad.
                                 Tengo 4 año de experiencia como desarrollador de software, varios conocimientos en
                                 lenguajes
                                 de programacion que fui desarrollando en estos años con las practicas de mi dia a dia y
                                 capacitaciones
-                                que fui realizando.
+                                que fui realizando.-->
+                                Mi primer puesto en la industria de TI fue como programador en SISTRAN Consultores en
+                                2019, y desde entonces soy desarrollador de software. Sin embargo, desde 2022 hasta el
+                                presente, he estado contratado como analista de TI por CNP Seguros. He trabajado como
+                                desarrollador de software durante 4 años y, durante ese tiempo, he adquirido una
+                                variedad de habilidades en lenguaje de programación a través de la práctica diaria y la
+                                capacitación formal.
                             </p>
                             <p>&nbsp;</p>
                             <img src="img/Lobo.png" style="height: 100px; width: 100px;">
-                            <p class="text-med width-90 center-col margin-seven no-margin-bottom">
+                            <p class="text-med width-90 center-col margin-seven no-margin-bottom"
+                                style="text-align: center;">
                                 ¿Sos desarrollador?, ¿Te intere saber el codigo de la pagina WEB?</p>
                             <a href="https://github.com/ProgramadorMLopez/Codermex">
                                 <button class="raise">VER CODIGO EN MI REPOSITORIO GITHUB</button>
@@ -161,58 +168,31 @@
                 <p class="text-center" style="margin-bottom: 0rem">WINDOWS&nbsp; &nbsp; &nbsp; | &nbsp; &nbsp; &nbsp;
                     WEB</p>
             </div>
-            <div class="content-img-text">
-                <img src="img/1686405422859 (1).jpg" alt="foto de perfil">
+            <div class="habi center d-flex">
+                <div class="content-img-text center d-flex">
+                    <img src="img/1686405422859 (1).jpg" alt="foto de perfil">
+                </div>
+                <div class="habi-png center d-flex">
+                    <img src="img/png/html.png" alt="habi html">
+                    <img src="img/png/css.png" alt="habi css">
+                    <img src="img/png/javascript.png" alt="habi javascript">
+                    <img src="img/png/bootstrap.png" alt="habi bootstrap">
+                    <img src="img/png/python.png" alt="habi python">
+                    <img src="img/png/django.png" alt="habi django">
+                    <img src="img/png/sqlserver.png" alt="habi sql server">
+                    <img src="img/png/mongodb.png" alt="habi mongodb">
+                    <img src="img/png/git.png" alt="habi git">
+                    <img src="img/png/github.png" alt="habi github">
+                    <img src="img/png/visualcode.png" alt="habi vscode">
+                    <img src="img/png/vb6.png" alt="habi vb6">
+                </div>
             </div>
-            <!--<div class="row-card row-cols-1 row-cols-md-3 g-4">
-                <div class="col">
-                    <div class="card">
-                        <img src="img/19362653.jpg" class="card-img-top" alt="frontend">
-                        <div class="card-body">
-                            <h5 class="card-title">Skills</h5>
-                            <p class="card-text">
-                                Frontend: HTML - CSS - JAVASCRIPT - BOOSTRAP
-                                Banckend: PYTHON - DJANGO - SQL SERVER - MYSQL
-                            </p>
-                        </div>
-                    </div>
-                </div>
-
-            </div>-->
-            <!--<div class="content-info">
-                <div class="row">
-                    <div class="vc-column center-col text-center">
-                        <div class="column-inner-wrapper">
-                            <span class="margin-five no-margin-top display-block letter-spacing-2" style="color:white">
-                                TECNOLOGIAS</span>
-                            <span class="label VSC">VISUAL STUDIO CODE</span>
-                            <span class="label HTML">HTML</span>
-                            <span class="label CSS">CSS</span>
-                            <span class="label JAVASCRIPT">JAVASCRIPT</span>
-                            <span class="label BOOSTRAP">BOOSTRAP</span>
-                            <span class="label PYTHON">PYTHON</span>
-                            <span class="label DJANGO">DJANGO</span>
-                            <span class="label VB6">VB6</span>
-                            <span class="label SQLSERVER">SQL SERVER</span>
-                            <span class="label TALEND">TALEND</span>
-                            <p class="text-center" style="color:white">
-                                Mi sueño es la creacion de mi propia empresa de tecnologia CODERMEX,
-                                donde pueda sastifacer a mis futuros clientes con aplicaciones que
-                                resuelva sus necesidades sin importar cual sea sus problemas.
-                                Trabajando en conjunto con ellos donde esa APPs cumpla con sus requisitos
-                                al 100%
-                            </p>
-                            <img src="img/Png/pngwing.com (1).png" alt="" style="height: 50%; width: 50%;">
-                        </div>
-                    </div>
-                </div>
-            </div>-->
         </section>
-        <section class="snap-section-4" style="background-color: aliceblue;">
+        <footer class="footer snap-section-4" style="background-color: aliceblue;">
             <p>
                 adasdasd
             </p>
-        </section>
+        </footer>
     </section>
 
 </body>
