Se agrego un script para el evento de scroll y le agregamos una translate

--- a/index.html
+++ b/index.html
@@ -119,9 +119,9 @@
                 <div class="row">
                     <div class="vc-column center-col text-center">
                         <div class="column-inner-wrapper">
-                            <span class="margin-five no-margin-top display-block letter-spacing-2">
+                            <span class="margin-five no-margin-top display-block letter-spacing-2 title">
                                 DESARROLLO DE APLICACIONES Y WEB</span>
-                            <h2 class="h-1"> MI NOMBRE ES MARCOS LOPEZ, SOFTWARE DEVELOPER.</h2>
+                            <h2 class="h-1"> MI NOMBRE ES <span>MARCOS LOPEZ</span>, SOFTWARE DEVELOPER.</h2>
                             <p class="text-med width-90 center-col margin-seven no-margin-bottom">
                                 <!--Codermex es mi proyecto mas grande hasta el dia de hoy
                                 donde quiero reflejar mis habilidades que fui obteniendo
