--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
             </div>
         </section>
         <footer class="footer footer-social">
-            <div class="codermex logo text-center " style="background-color: #292537;">
+            <div class="codermex text-center " style="background-color: #292537;">
                 Mi Nombre es Marcos Lopez, Web Developer
                 <hr>
                 <ul class="navbar-nav navbar-dark" style="flex-direction: row; display: inline-flex;">
@@ -180,8 +180,17 @@
                         <a class="nav-link" href="#">Servicios Freelance</a>
                     </li>
                 </ul>
-                <a href="https://www.linkedin.com/in/braismoure" target="_blank" class="black-text-link"
-                    rel="noopener"><i class="fab fa-linkedin-in"></i></a>
+                <br>
+                <svg xmlns="http://www.w3.org/2000/svg" width="25%" height="25%" viewBox="0 0 100 100">sadasdasd
+                    <path fill="#FAF9F7"
+                        d="M15.698 7.287 8.712.302a1.03 1.03 0 0 0-1.457 0l-1.45 1.45 1.84 1.84a1.223 1.223 0 0 1 1.55 1.56l1.773 1.774a1.224 1.224 0 0 1 1.267 2.025 1.226 1.226 0 0 1-2.002-1.334L8.58 5.963v4.353a1.226 1.226 0 1 1-1.008-.036V5.887a1.226 1.226 0 0 1-.666-1.608L5.093 2.465l-4.79 4.79a1.03 1.03 0 0 0 0 1.457l6.986 6.986a1.03 1.03 0 0 0 1.457 0l6.953-6.953a1.031 1.031 0 0 0 0-1.457" />
+                </svg>
+
+
+                <svg xmlns="http://www.w3.org/2000/svg" width="25%" height="25%" viewBox="0 0 100 100">
+                    <path fill="#FAF9F7"
+                        d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854V1.146zm4.943 12.248V6.169H2.542v7.225h2.401zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248-.822 0-1.359.54-1.359 1.248 0 .694.521 1.248 1.327 1.248h.016zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016a5.54 5.54 0 0 1 .016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225h2.4z" />
+                </svg>
 
             </div>
             <div class="min-txt redes " style="background-color: #202020; min-height: 20vh;"></div>
