--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav navbar-dark">
-                    <li class="nav-item nav-selection border-end">
+                    <li class="nav-item nav-selection">
                         <a class="nav-link" href="#">
                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                                 class="bi bi-cup-hot" viewBox="0 1 16 16">
@@ -52,7 +52,7 @@
                             </svg> Sobre mi
                         </a>
                     </li>
-                    <li class="nav-item nav-selection dropdown border-end">
+                    <li class="nav-item nav-selection">
                         <a class="nav-link" href="#">
                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                                 class="bi bi-database" viewBox="0 1 16 16">
@@ -183,7 +183,7 @@
                 <br>
 
                 <ul class="navbar-nav navbar-dark"
-                    style="flex-direction: row; display: inline-flex; padding: 30px 0 0 0;">
+                    style="flex-direction: row; display: inline-flex; padding: 15px 0 0 0;">
                     <li class="nav-item padding" width="16" height="16">
                         <a class="nav-link" href="#"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
                                 viewBox="0 0 16 16">
@@ -201,7 +201,7 @@
                 </ul>
             </div>
             <div class="min-txt redes "
-                style="background-color: #202020; min-height: 15vh; font-size: 10px; padding-left: 10px;">
+                style="background-color: #202020; min-height: 12vh; font-size: 10px; padding-left: 10px;">
                 2023 CODERMEX POR MLOPEZ. DESARROLLANDO MIS SUEÑOS DESDE ARGENTINA - BUENOS AIRES <svg
                     xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                     class="bi bi-geo-alt-fill" viewBox="0 0 16 16">
