se agrego un boton

--- a/index.html
+++ b/index.html
@@ -7,9 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--<title>CODERMEX</title>-->
     <title>
-        {% block titulo %}
+
         Inicio
-        {% endblock %}
     </title>
     <link href="http://fonts.cdnfonts.com/css/clash-display" ref="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800;900&display=swap"
@@ -92,6 +91,7 @@
                     </ul>
                 </div>
             </div>
+            <button>hola jere</button>
         </section>
         <section class="snap-section-2">
             <div class="content-info">
